cmake_minimum_required(VERSION 3.24)
project(helpmij C)

set(CMAKE_C_STANDARD 11)

add_executable(main main.c)
add_executable(oef2 "Exercises/session 2/oef2.c")
add_executable(oef3 "Exercises/session 2/oef3.c")
add_executable(oef4 "Exercises/session 2/oef4.c")
add_executable(oef5 "Exercises/session 2/oef56.c")